load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chunker",
    srcs = ["chunker.go"],
    importpath = "github.com/antonovvk/blobsnap/chunker",
    visibility = ["//visibility:public"],
)

go_test(
    name = "chunker_test",
    srcs = ["chunker_test.go"],
    embed = [":chunker"],
)
