load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clientutil",
    srcs = [
        "dirreader.go",
        "dirwriter.go",
        "filereader.go",
        "filewriter.go",
        "meta.go",
        "uploader.go",
        "utils.go",
    ],
    importpath = "github.com/antonovvk/blobsnap/clientutil",
    visibility = ["//visibility:public"],
    deps = [
        "//chunker",
        "//store",
        "@com_github_dchest_blake2b//:blake2b",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_hashicorp_golang_lru//:golang-lru",
        "@com_github_sabhiram_go_gitignore//:go-gitignore",
        "@com_github_workiva_go_datastructures//trie/yfast",
    ],
)

go_test(
    name = "clientutil_test",
    srcs = ["uploader_test.go"],
    embed = [":clientutil"],
    deps = ["//store"],
)
