load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fs",
    srcs = ["fs.go"],
    importpath = "github.com/antonovvk/blobsnap/fs",
    visibility = ["//visibility:public"],
    deps = [
        "//clientutil",
        "//snapshot",
        "//store",
        "@com_github_inconshreveable_log15//:log15",
        "@com_github_jinzhu_now//:now",
        "@org_bazil_fuse//:fuse",
        "@org_bazil_fuse//fs",
    ],
)

go_test(
    name = "fs_test",
    srcs = ["fs_test.go"],
    embed = [":fs"],
    deps = ["//snapshot"],
)
