load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scheduler",
    srcs = [
        "config.go",
        "scheduler.go",
    ],
    importpath = "github.com/antonovvk/blobsnap/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshot",
        "//store",
        "@com_github_robfig_cron//:cron",
    ],
)
