load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["uploader.go"],
    importpath = "github.com/antonovvk/blobsnap/snapshot",
    visibility = ["//visibility:public"],
    deps = [
        "//clientutil:go_default_library",
        "//store:go_default_library",
        "@com_github_dchest_blake2b//:go_default_library",
    ],
)
