load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "snapshot",
    srcs = ["uploader.go"],
    importpath = "github.com/antonovvk/blobsnap/snapshot",
    visibility = ["//visibility:public"],
    deps = [
        "//clientutil",
        "//store",
        "@com_github_dchest_blake2b//:blake2b",
    ],
)
