load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = [
        "bolt.go",
        "fake.go",
        "file.go",
        "store.go",
        "yadisk.go",
    ],
    importpath = "github.com/antonovvk/blobsnap/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antonovvk_yandex_disk_sdk_go//:yandex-disk-sdk-go",
        "@com_github_inconshreveable_log15//:log15",
        "@io_etcd_go_bbolt//:bbolt",
    ],
)
