load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "blobsnap_lib",
    srcs = ["blobsnap.go"],
    importpath = "github.com/antonovvk/blobsnap/cmd/blobsnap",
    visibility = ["//visibility:private"],
    deps = [
        "//fs",
        "//snapshot",
        "//store",
    ],
)

go_binary(
    name = "blobsnap",
    embed = [":blobsnap_lib"],
    visibility = ["//visibility:public"],
)
